components/markdown/src/snapshots/markdown__markdown__tests__transpose_alignment.snap
---
source: components/markdown/src/markdown.rs
expression: render_transpose(content)
---
<div class="transpose transpose-bp-30rem transpose-cols-3"><table><thead><tr><th style="text-align: left">L</th><th style="text-align: center">C</th><th style="text-align: right">R</th></tr></thead><tbody>
<tr><td style="text-align: left">a</td><td style="text-align: center">b</td><td style="text-align: right">c</td></tr>
</tbody></table>
</div>
