components/markdown/src/snapshots/markdown__markdown__tests__transpose_no_table_is_noop.snap
---
source: components/markdown/src/markdown.rs
expression: render_transpose(content)
---
<p>Just a paragraph, no table here.</p>
